Add GitHub Actions workflow for tox testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,14 @@
 [tox]
 minversion = 4.0
-envlist = py{311,312,313,314}, min_deps
+envlist = py{311,312,313,314,315}, min_deps
 
 [testenv]
 extras = test
 commands = pytest tests/
+
+[testenv:py315]
+ignore_outcome = true
+
 
 [testenv:min_deps]
 description = Minimum supported deps
